--- a/TraderaTest/Base.lproj/Main.storyboard
+++ b/TraderaTest/Base.lproj/Main.storyboard
@@ -163,10 +163,10 @@
             </objects>
             <point key="canvasLocation" x="1089" y="251"/>
         </scene>
-        <!--Create Auction View Controller-->
+        <!--Ny auktion-->
         <scene sceneID="GGp-oj-ZJO">
             <objects>
-                <viewController id="Yc2-d6-Z4r" customClass="CreateAuctionViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Ny auktion" id="Yc2-d6-Z4r" customClass="CreateAuctionViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="N93-fI-qxd"/>
                         <viewControllerLayoutGuide type="bottom" id="869-Xl-h5k"/>
@@ -328,10 +328,10 @@
             </objects>
             <point key="canvasLocation" x="1089" y="1021"/>
         </scene>
-        <!--Select Category View Controller-->
+        <!--Välj kategori-->
         <scene sceneID="y8G-iD-oJ0">
             <objects>
-                <viewController id="kZx-tc-Cao" customClass="SelectCategoryViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Välj kategori" id="kZx-tc-Cao" customClass="SelectCategoryViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="J7h-7e-nCC"/>
                         <viewControllerLayoutGuide type="bottom" id="t2J-76-VfL"/>
@@ -368,6 +368,10 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="PTk-kf-5mc">
+                                <rect key="frame" x="262" y="76" width="22" height="22"/>
+                                <state key="normal" title="hdj"/>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -379,6 +383,11 @@
                             <constraint firstItem="HWI-2H-LWe" firstAttribute="top" secondItem="J7h-7e-nCC" secondAttribute="bottom" constant="8" symbolic="YES" id="zua-nJ-eKX"/>
                         </constraints>
                     </view>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Välj kategori" id="2S9-XQ-fgw">
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fZd-jC-k5o"/>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="categoryTableView" destination="NDm-v8-ly4" id="VYz-rE-GQF"/>
                     </connections>
@@ -387,10 +396,10 @@
             </objects>
             <point key="canvasLocation" x="1777" y="1791"/>
         </scene>
-        <!--Select Time View Controller-->
+        <!--Välj datum-->
         <scene sceneID="R6P-JR-MV6">
             <objects>
-                <viewController id="8vk-Ky-58W" customClass="SelectTimeViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Välj datum" id="8vk-Ky-58W" customClass="SelectTimeViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="2Dz-QX-mmO"/>
                         <viewControllerLayoutGuide type="bottom" id="LyW-wg-vMn"/>
@@ -405,7 +414,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="iEf-y6-cHi">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="5" translatesAutoresizingMaskIntoConstraints="NO" id="iEf-y6-cHi">
                                 <rect key="frame" x="20" y="101" width="560" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="486233943.66713899">
                                     <!--2016-05-29 16:59:03 +0000-->
@@ -417,7 +426,7 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="XMi-L1-SHg">
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="5" translatesAutoresizingMaskIntoConstraints="NO" id="XMi-L1-SHg">
                                 <rect key="frame" x="20" y="354" width="560" height="216"/>
                                 <date key="date" timeIntervalSinceReferenceDate="486233943.66713899">
                                     <!--2016-05-29 16:59:03 +0000-->
@@ -438,6 +447,7 @@
                             <constraint firstItem="iEf-y6-cHi" firstAttribute="leading" secondItem="Bfl-mz-9Tq" secondAttribute="leading" id="t2D-tB-uiy"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Välj tid" id="FjU-KJ-aQT"/>
                     <connections>
                         <outlet property="endingDatePicker" destination="XMi-L1-SHg" id="ZwS-3R-PKl"/>
                         <outlet property="startingDatePicker" destination="iEf-y6-cHi" id="doA-ac-kg7"/>
@@ -447,10 +457,10 @@
             </objects>
             <point key="canvasLocation" x="1777" y="1021"/>
         </scene>
-        <!--Tradera Search Table View Controller-->
+        <!--Sökresultat-->
         <scene sceneID="bY0-yi-IHZ">
             <objects>
-                <tableViewController id="TB7-am-ceX" customClass="TraderaSearchTableViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="Sökresultat" id="TB7-am-ceX" customClass="TraderaSearchTableViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="MXt-lG-FCG">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -522,7 +532,7 @@
         <!--Auktion-->
         <scene sceneID="o1e-dO-Qto">
             <objects>
-                <viewController storyboardIdentifier="TraderaItemViewControllerScene" title="Auktion" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nmW-TR-mV4" customClass="TraderaItemViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="TraderaItemViewControllerScene" title="Auktion" modalTransitionStyle="crossDissolve" useStoryboardIdentifierAsRestorationIdentifier="YES" id="nmW-TR-mV4" customClass="TraderaItemViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="p0d-Gk-jsJ"/>
                         <viewControllerLayoutGuide type="bottom" id="n9j-56-f0z"/>
@@ -641,10 +651,10 @@
             </objects>
             <point key="canvasLocation" x="392" y="251"/>
         </scene>
-        <!--Schenker View Controller-->
+        <!--Närmaste Schenkerombud-->
         <scene sceneID="Q5H-M2-7Pm">
             <objects>
-                <viewController id="zqA-LL-1P6" customClass="SchenkerViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Närmaste Schenkerombud" id="zqA-LL-1P6" customClass="SchenkerViewController" customModule="TraderaTest" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dsU-VJ-mfl"/>
                         <viewControllerLayoutGuide type="bottom" id="gyG-iC-Z03"/>
@@ -711,27 +721,8 @@
             </objects>
             <point key="canvasLocation" x="392" y="1021"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="9Tp-YC-Bg0">
-            <objects>
-                <navigationController storyboardIdentifier="Auction Scene Navigation" automaticallyAdjustsScrollViewInsets="NO" id="brw-0y-jHa" sceneMemberID="viewController">
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="E0W-fz-gBL">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="nmW-TR-mV4" kind="relationship" relationship="rootViewController" id="6El-lc-aki"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iyE-zo-YFJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2504" y="-499"/>
-        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="DbN-wP-lsI"/>
         <segue reference="hXB-0I-fx5"/>
     </inferredMetricsTieBreakers>
 </document>
